<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KS</string>
    <string name="author_name">Krzysztof Studnicki 335108</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="erase">&lt;-</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="clearEverything">CE</string>
    <string name="title_activity_calculator">SecondApp</string>
    <string name="title_activity_first_app">FirstApp</string>
    <string name="firstApp">Testowa Apka</string>
    <string name="secondApp">Kalkulator Prosty</string>
    <string name="title_activity_third_app">ThirdApp</string>
    <string name="song_info">Title: \nArtist:\nAlbum:\nGenre:\nYear:</string>
    <string name="thirdApp">Odtwarzacz MP3</string>
    <string name="title_activity_splash_screen_acitvity">SplashScreenAcitvity</string>
    <string name="title">Title:</string>
    <string name="artist">Artist:</string>

    <string name="title_activity_fourth_app">FourthApp</string>

</resources>
