<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.s3ns3i.zadanie1.SecondApp"
    android:orientation="vertical">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/operationTextView"
                android:textSize="30sp"
                android:layout_span="4" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:id="@+id/resultTextView"
                android:textSize="30sp"
                android:layout_span="3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:id="@+id/displayTextView"
                android:textSize="30sp"
                android:layout_span="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/clearEverything"
                android:id="@+id/clearEverythingButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/clear"
                android:id="@+id/clearButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/erase"
                android:id="@+id/eraseButton"
                android:textSize="22sp"
                android:layout_span="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/seven"
                android:id="@+id/sevenButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/eight"
                android:id="@+id/eightButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/nine"
                android:id="@+id/nineButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/divide"
                android:id="@+id/divideButton"
                android:textSize="22sp"
                android:layout_span="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/four"
                android:id="@+id/fourButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/five"
                android:id="@+id/fiveButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/six"
                android:id="@+id/sixButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/multiply"
                android:id="@+id/multiplyButton"
                android:textSize="22dp"
                android:layout_span="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/one"
                android:id="@+id/oneButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/two"
                android:id="@+id/twoButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/three"
                android:id="@+id/threeButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/subtract"
                android:id="@+id/substractButton"
                android:textSize="22sp"
                android:layout_span="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/dot"
                android:id="@+id/dotButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/zero"
                android:id="@+id/zeroButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/equals"
                android:id="@+id/equalsButton"
                android:textSize="22sp"
                android:layout_span="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/add"
                android:id="@+id/addButton"
                android:textSize="22sp"
                android:layout_span="1" />
        </TableRow>
</TableLayout>
