<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout"
    android:clickable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/author_name"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/firstApp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/secondApp"
        android:id="@+id/button2"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/thirdApp"
        android:id="@+id/button3"
        android:clickable="true"
        android:textSize="20dp" />

</LinearLayout>
